--- a/5_sourcecode/console/.gitlab-ci.yml
+++ b/5_sourcecode/console/.gitlab-ci.yml
@@ -4,13 +4,13 @@ stages:
 develop-build:
   stage: develop-build
   image: docker:latest
-  tags: [gitlab-docker]
+  tags: [gitlab-build]
   services:
     - docker:dind
   variables:
     DOCKER_TLS_CERTDIR: ""
     GCP_REPOSITORY_REGION: asia-southeast1
-    GCR_IMAGE_NAME: "asia-southeast1-docker.pkg.dev/$GOOGLE_PROJECT_ID/application-registry/$CI_PROJECT_NAME"
+    GCR_IMAGE_NAME: "asia-southeast1-docker.pkg.dev/$GOOGLE_PROJECT_ID/application/$CI_PROJECT_NAME"
   before_script:
     - cat ${GOOGLE_AUTH_JSON} | docker login -u _json_key --password-stdin
       https://${GCP_REPOSITORY_REGION}-docker.pkg.dev
